--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+SQLAlchemy==1.0.5
+astroid==1.3.6
 beautifulsoup4==4.3.2
 feedparser==5.1.3
+logilab-common==0.63.2
 lxml==3.4.4
+pylint==1.4.3
 python-dateutil==2.4.2
 six==1.9.0
 wsgiref==0.1.2
