--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+Flask==0.10.1
+Flask-SQLAlchemy==2.0
+Jinja2==2.7.3
 Mako==1.0.1
 MarkupSafe==0.23
 SQLAlchemy==1.0.5
+Werkzeug==0.10.4
 alembic==0.7.6
 astroid==1.3.6
 beautifulsoup4==4.3.2
 coverage==3.7.1
 feedparser==5.1.3
+itsdangerous==0.24
 logilab-common==0.63.2
 lxml==3.4.4
 pylint==1.4.3
